<resources>
    <string name="app_name">Taller1</string>
    <string name="tvuser">USUARIO</string>
    <string name="tvpass">CONTRASEÑA</string>
    <string name="tvforgot">Olvidó su contraseña</string>
    <string name="cbremb">Recordar datos</string>
    <string name="cbtac">Acepto términos y condiciones</string>
    <string name="btnlogin">Iniciar sesión</string>
    <string name="btnsignup">Registrarse</string>
    <string name="tvida">DATOS INVÁLIDOS</string>
    <string name="tvtitleforgot">RECUPERAR CONTRASEÑA</string>
    <string name="btncode">ENVIAR CÓDIGO</string>
    <string name="tvemail">CORREO</string>
    <string name="tvcode">CÓDIGO</string>
    <string name="btnvalidate">VALIDAR</string>
    <string name="tvnp">Nueva contraseña</string>
    <string name="tvcp">Confirmar contraseña</string>
    <string name="btnchange">CAMBIAR</string>
    <string name="tvname">NOMBRE</string>
    <string name="tvlname">APELLIDO</string>
    <string name="tvsex">SEXO</string>
    <string name="btnsave">GUARDAR</string>
    <string name="tvtitlesu">REGISTRARSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_help">Ayuda</string>
    <string name="title_logout">Cerrar sesión</string>
    <string name="btnphisics">FÍSICA</string>
    <string name="btntext">TEXTO</string>
    <string name="btngeometry">GEOMETRÍA</string>
    <string name="tvhelp1">APP v1 DESARROLLADA POR:</string>
    <string name="tvlogout">Confirmar cierre de sesión</string>
    <string name="tvdata1">Ingrese los datos correspondientes</string>
    <string name="tvx1">X1</string>
    <string name="tvx2">X2</string>
    <string name="tvy1">Y1</string>
    <string name="tvy2">Y2</string>
    <string name="btncalculate">CALCULAR</string>
    <string name="tvresults" />
    <string name="tvtextresults" />
    <string name="tvtext1">Escriba acontinuación su texto</string>
    <string name="btntransform">TRANSFORMAR</string>
    <string name="tvphisics">FÍSICA</string>
    <string name="btnvelocity">CALCULAR VELOCIDAD</string>
    <string name="btnforce">CALCULAR FUERZA</string>
    <string name="btnvoltage">CALCULAR VOLTAJE</string>
    <string name="tvdistance">Distancia:</string>
    <string name="tvkm">km</string>
    <string name="tvtime">Tiempo:</string>
    <string name="tvhours">horas</string>
    <string name="tvmass">Masa:</string>
    <string name="tvkg">kg</string>
    <string name="tvacel">Aceleración</string>
    <string name="tvms">m/s2</string>
    <string name="tvamp">Amperaje</string>
    <string name="tvamp2">Resistencias</string>
    <string name="tvresists">Valores de las resistencias</string>
    <string name="tvr1">R1</string>
    <string name="tvr2">R2</string>
    <string name="tvr3">R3</string>
    <string name="cbpar">Resistencias paralelas</string>
    <string name="A">A</string>
    <string name="tvr1o">Ω</string>
    <string name="tvresultsvol" />
    <string name="btnback">VOLVER</string>
    <string name="tvHN">Henry Núñez XD</string>

</resources>